[package]
name = "spielplatz"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
bitflags = "2.10.0"
clap = { version = "4.5.54", features = ["derive"] }
glslang = "0.6.2"
png = "0.18.0"
rspirv = { git = "https://github.com/doitsujin/rspirv.git", rev = "a1f695f7be090a98e5654e26ab5baf55e0c5f2c8" }
sdl3 = "0.17.3"
serde_json = "1.0.149"
